# lua-feedstock

./: .travis.yml  README.md  conda-forge.yml  pixi.toml
.azure-pipelines/: azure-pipelines-win.yml
.ci_support/: linux_.yaml  linux_64_.yaml  linux_aarch64_.yaml  linux_c_compilergcc.yaml  linux_c_compilertoolchain_c.yaml  linux_ppc64le_.yaml  osx_.yaml  osx_64_.yaml  osx_arm64_.yaml  osx_c_compilerclang.yaml  osx_c_compilertoolchain_c.yaml  win_64_.yaml  win_arm64_.yaml
.github/: CODEOWNERS
.scripts/: build_steps.sh  run_osx_build.sh
recipe/: CMakeLists.txt  Makefile.patch  build.bat  build.sh  liblua.so.patch  lua-51-conda-forge.patch  luaconf.patch  meta.yaml  recipe.yaml
recipe/patches/: 0001-Enables-Lua-to-look-for-packages-on-a-relative-path.patch  0002-Build-as-a-shared-library.patch  0003-Enables-readline-on-linux.patch
